<resources>
    <string name="app_name">Book Now - Truck In Transit</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="mobile_number">mobileNumber</string>
    <string name="email">EmailAddress</string>
    <string name="state">State</string>
    <string name="adress">address</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="enter_4_digit_otp_number_to_proceed">Enter 4 Digit OTP Number To Proceed</string>
    <string name="login">LOGIN</string>
    <string name="or_login_with_password">Or Login with password</string>
    <string name="by_clicking_on_login_you_agree_to_our_terms_of_service_and_privacy_policy">By clicking on login, you
        agree to our terms of service and privacy policy
    </string>
    <string name="terms_of_service">Terms Of service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="_91_enter_your_10_digit_mobile_number">Enter Your 10 digit mobile Number</string>
    <string name="next">Next</string>
    <string name="emptynumber">phone no. should not be empty!</string>
    <string name="valid_input_number">please input valid 10 digit number</string>
    <string name="no_internet">No internet connection</string>
    <string name="valid_otp">please input valid otp</string>
    <string name="error_no_text">Required Input Field</string>
    <string name="resend_sms">Resend Sms</string>
    <string name="truck">Truck</string>
    <string name="in_transit">In Transit</string>
    <string name="whenever_you_want_it_we_are_in_transit">Whenever you want it, We are in transit!</string>
    <string name="app_text">At TruckInTransit, Our operators earn money with the help of leading technology and
        innovative pricing catalogue. Join as a operator with a mini-truck or 2 Wheeler!
    </string>
    <string name="partner_with_us">Book Your Ride</string>
    <string name="attractive_incomes">Attractive Incomes</string>
    <string name="distanceandtimematrix">Distance and time matrix as per the category of vehicle.</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="title_activity_driver_location">Map</string>
    <string name="online">Online</string>
    <string name="offfline">Offline</string>
    <string name="select_body">Select Body</string>
    <string name="select_fuel_type">Select Fuel Type</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>


</resources>
