<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/registration_background_colour"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">


        <com.google.android.material.appbar.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/toolbar_background_colour"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout android:layout_width="match_parent"
                          android:orientation="vertical"
                          android:layout_height="wrap_content">



        <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="@dimen/_15sdp"
                      android:orientation="horizontal"
                  >

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    app:civ_border_color="@color/toolbar_background_colour"
                    android:contentDescription="@string/nav_header_desc"
                    android:src="@drawable/profile_pic"
            />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/yellow"
                        android:text="Sanjay Singh"
                />


            </LinearLayout>


        </LinearLayout>


        <RelativeLayout android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"

                        android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#a0a0a0"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:textColor="#a0a0a0"
                        android:backgroundTint="#979797"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"
                    android:textColor="#ff9800"
                    android:text="View"
            />

        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:textColorHint="#a0a0a0"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:textColorHint="#a0a0a0"
                        android:inputType="textEmailAddress"
                        android:textColor="#a0a0a0"
                        android:backgroundTint="#979797"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"
                    android:textColor="#ff9800"
                    android:text="View"
            />

        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:textColorHint="#a0a0a0"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:textColorHint="#a0a0a0"
                        android:inputType="text"
                        android:textColor="#a0a0a0"
                        android:backgroundTint="#979797"
                        android:layout_height="wrap_content"
                        android:hint="@string/state" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"
                    android:textColor="#ff9800"
                   android:drawableTop="@drawable/ic_expand_more_yellow_24dp"
            />

        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:textColorHint="#a0a0a0"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:textColorHint="#a0a0a0"
                        android:inputType="textMultiLine"
                        android:textColor="#a0a0a0"
                        android:backgroundTint="#979797"
                        android:layout_height="wrap_content"
                        android:hint="@string/adress" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"
                    android:textColor="#ff9800"
                    android:text="View"
            />

        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/_18sdp"
                        android:layout_marginEnd="@dimen/_18sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"


                    android:textColor="#656565"
                    android:text="Payment Details"
            />

        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_marginStart="@dimen/_18sdp"
                        android:layout_marginEnd="@dimen/_18sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#656565"
                    android:text="Documents"
            />

        </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>